--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -34,6 +34,15 @@ log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=WARN
 log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=WARN
 log4j.logger.org.apache.parquet=ERROR
 log4j.logger.parquet=ERROR
+log4j.logger.org.apache.spark.streaming=INFO
+log4j.logger.org.apache.spark.util=INFO
+log4j.logger.org.apache.spark.scheduler=INFO
+log4j.logger.org.apache.spark=INFO
+log4j.logger.org.apache.spark.storage=INFO
+log4j.logger.org.spark_project.jetty.util.component=INFO
+log4j.logger.org.spark_project.jetty.util=INFO
+log4j.logger.org.spark_project=INFO
+log4j.logger.org.spark_project.jetty.io=INFO
 
 # SPARK-9183: Settings to avoid annoying messages when looking up nonexistent UDFs in SparkSQL with Hive support
 log4j.logger.org.apache.hadoop.hive.metastore.RetryingHMSHandler=WARN
