added checkpoints and logs to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,5 @@ metastore_db/
 # Simple Build Tool
 # http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
+spark-streaming/spark.log.*
+spark-streaming/checkpoints
